--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 ﻿asgiref==3.11.0
 Django==4.1.13
+psycopg2-binary==2.9.11
 python-dotenv==1.2.1
 sqlparse==0.5.5
+typing_extensions==4.15.0
 tzdata==2025.3
